@@ -1,3 +1,8 @@
+- XFdrake:
+  o if the EDID gives a valid 16/10 preferred resolution (even if duplicated),
+    but no HorizSync/VertRefresh, use a generic flat panel
+    HorizSync/VertRefresh (needed for edid.lcd.dell-inspiron-6400, #37971)
+
 Version 0.49 - 28 February 2008
 
 - XFdrake: background images are now jpeg files
@@ -34,6 +39,7 @@ Version 0.43 - 23 January 2008
 - XFdrake:
   o if the EDID gives a valid EISA_ID, a valid 16/10 preferred resolution, but
     no HorizSync/VertRefresh, use a generic flat panel HorizSync/VertRefresh
+    (needed for edid.lcd.Elonex-PR600)
 
 Version 0.42 - 22 January 2008
 
